--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -1,9 +1,9 @@
-<div class="top d-flex align-items-center">
-  <div class="container top-content">
+<div class="main__top d-flex align-items-center">
+  <div class="container main__top--content">
     <div class="row">
       <div class="col-lg-7 mx-auto text-center">
         <h1 class="display-8 text-white">「時短の極み」はパソコン操作・アプリのショートカットキーを覚えるための<br>サービスです。</h1>
-        <p class="text-white my-3 border-box">
+        <p class="text-white my-3 main__top--border-box">
           対応OS・アプリケーション
         </p>
         <p class="text-white my-3">
@@ -18,24 +18,22 @@
   <div class="row g-4">
 
     <div class="col-md-4">
-      <div class="ranking">
-        <img src="img/blog1.jpg" alt="">
-        <h5 class="mb-0 mt-4">
+      <div class="main__top--ranking">
+        <h5 class="mb-0">
           高得点ユーザーランキング
         </h5>
-        <p><span class="rank-num gold">1</span>　<span class="score">97点</span>　ブレンドさん</p>
-        <p><span class="rank-num silver">2</span>　<span class="score">89点</span>　エスプレッソさん</p>
-        <p><span class="rank-num bronze">3</span>　<span class="score">82点</span>　カフェオレさん</p>
+        <p><span class="main__top--rank-num main__top--rank-gold">1</span>　<span class="main__top--score">97点</span>　ブレンドさん</p>
+        <p><span class="main__top--rank-num main__top--rank-silver">2</span>　<span class="main__top--score">89点</span>　エスプレッソさん</p>
+        <p><span class="main__top--rank-num main__top--rank-bronze">3</span>　<span class="main__top--score">82点</span>　カフェオレさん</p>
       </div>
     </div>
     
     <div class="col-md-8">
-      <div class="fields-head text-center">
-        <img src="img/blog1.jpg" alt="">
-        <h5 class="mb-0 mt-4 os-app-head-box">
+      <div class="main__top--categories-head text-center">
+        <h5 class="mb-0">
           対応OS・アプリケーションごとの問題
         </h5>
-        <div class="row field-menus">
+        <div class="row main__top--category-menus">
           <div class="col-md-6">
             <p>Windows</p>
           </div>
