--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,10 @@
         <% end %>
       </div>
 
-      <div class="d-flex justify-content-end align-items-center header-right-content">
+      <div class="d-flex justify-content-end align-items-center header__right-content">
           <%= image_tag "user_icon.png", class: "rounded-circle me-3", width: "50px", alt: "" %>
 
-          <p class="text-green d-md-block d-none fs-6 pe-2 mt-3">ユーザー名</p>
+          <p class="header__user-name d-md-block d-none fs-6 pe-2 mt-3">ユーザー名</p>
           <div class="dropdown">
             <a class="dropdown-toggle text-purple" data-bs-toggle="dropdown" href="#"></a>
             <div class="dropdown-menu dropdown-menu-end shadow text-center" style="padding: 4px 0px;">
