--- a/app/assets/stylesheets/top-style.scss
+++ b/app/assets/stylesheets/top-style.scss
@@ -7,9 +7,8 @@
   z-index: 2;
   overflow: hidden; /* オーバーレイのテキストへの影響を防ぐ */
   height: 450px;
-}
-
-.main__top::before {
+  
+  &::before {
   content: "";
   position: absolute;
   top: 0;
@@ -18,41 +17,41 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-}
-
-.main__top--content {
+  }
+  
+  &--content {
   position: relative;
   z-index: 2;
   color: #fff;
   
-  h1 {
-  margin-top: 140px;
+    h1 {
+    margin-top: 140px;
+    }
   }
-}
-
-.main__top--border-box {
+  
+  &--border-box {
   border: 1px solid #fff;
   display: inline-block;
   padding: 10px;
-}
-
-.main__top--ranking {
+  }
+  
+  &--ranking {
   padding-left: 15px;
   padding-bottom: 15px;
   
-  h5 {
-    margin-top: 50px;
-    padding-bottom: 20px;
-    color: green;
-    font-weight: bold;
+    h5 {
+      margin-top: 50px;
+      padding-bottom: 20px;
+      color: green;
+      font-weight: bold;
+    }
+    
+    p {
+      margin-top: 10px;
+    }
   }
   
-  p {
-    margin-top: 10px;
-  }
-}
-
-.main__top--rank-num {
+  &--rank-num {
   font-weight: bold;
   color: white;
   padding: 0.5em;
@@ -63,70 +62,71 @@
   line-height: 1;
   width: 1.9em;
   height: 1.9em;
-}
-
-.main__top--rank-gold {
+  }
+  
+  &--rank-gold {
   background-color: gold;
-}
-
-.main__top--rank-silver {
+  }
+  
+  &--rank-silver {
   background-color: silver;
-}
+  }
 
-.main__top--rank-bronze {
+  &--rank-bronze {
   background-color: #cd7f32;
-}
-
-.main__top--score {
+  }
+  
+  &--score {
   font-weight: bold;
-}
-
-.main__top--categories-head {
+  }
+  
+  &--categories-head {
   margin-top: 50px;
   
-  h5 {
-    color: #00552e;
-    background-color: #EAF7ED;
-    border: 1.5px solid #008000;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 20px;
-    margin-left: 15px;
+    h5 {
+      color: #00552e;
+      background-color: #EAF7ED;
+      border: 1.5px solid #008000;
+      border-radius: 5px;
+      padding: 10px;
+      margin-bottom: 20px;
+      margin-left: 15px;
+    }
   }
-}
-
-.main__top--category-menus {
+  
+  &--category-menus {
   margin-top: 25px;
   
-  .col-md-6 {
-    border: 2px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    width: calc(50% - 20px);
-    margin-left: 20px;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    position: relative;
-  }
-  
-  .col-md-6::after {
-    content: ">";
-    font-size: 24px;
-    font-weight:lighter;
-    margin-left: 10px;
-    position: absolute;
-    right: 18px;
-    color: #333;
-  }
-  
-  .col-md-6 p {
-    font-size: 18px;
-    margin: 0;
-  }
-  
-  .col-md-6 + .col-md-6 {
-    margin-left: 20px;
+    .col-md-6 {
+      border: 2px solid #ccc;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      width: calc(50% - 20px);
+      margin-left: 20px;
+      text-align: left;
+      display: flex;
+      align-items: center;
+      position: relative;
+    }
+    
+    .col-md-6::after {
+      content: ">";
+      font-size: 24px;
+      font-weight:lighter;
+      margin-left: 10px;
+      position: absolute;
+      right: 18px;
+      color: #333;
+    }
+    
+    .col-md-6 p {
+      font-size: 18px;
+      margin: 0;
+    }
+    
+    .col-md-6 + .col-md-6 {
+      margin-left: 20px;
+    }
   }
 }
