--- a/app/assets/stylesheets/common-style.scss
+++ b/app/assets/stylesheets/common-style.scss
@@ -24,22 +24,22 @@
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
-}
-
-.errors h3 {
+  
+  h3 {
   margin-top: 0;
   color: inherit;
   font-size: 25px;
-}
-
-.errors ul {
+  }
+  
+  ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
-
-.errors li {
+  }
+  
+  li {
   margin-bottom: 10px;
+  }
 }
 
 .alert {
