--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,38 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+<div class="d-flex flex-column align-items-center mt-5">
+  <h2>マイページ編集</h2>
+  
+  <%= form_with model: resource, url: registration_path(resource_name), local: true, method: :put, class: 'form' do |f| %>
+  
+    <div class="form__group d-flex flex-column mt-5">
+      <div class="row">
+      <%= f.label :email, 'メールアドレス（必須）:' %>
+      <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control col-md-10' %>
+      </div>
+    </div>
+  
+    <div class="form__group d-flex flex-column mt-4">
+      <div class="row">
+      <%= f.label :password, 'パスワード:' %>
+      <%= f.password_field :password, autocomplete: 'new-password', placeholder: '空欄のままなら変更しません', class: 'form-control col-md-10' %>
+      </div>
+    </div>
+  
+    <div class="form__group d-flex flex-column mt-4">
+      <div class="row">
+      <%= f.label :password_confirmation, 'パスワード確認:' %>
+      <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control col-md-10' %>
+      </div>
+    </div>
+  
+    <div class="form__group d-flex flex-column mt-4">
+      <div class="row">
+      <%= f.label :current_password, '現在のパスワード（必須）:'  %>
+      <%= f.password_field :current_password, autocomplete: 'current-password', placeholder: '現在のパスワードを入力してください', class: 'form-control col-md-10' %>
+      </div>
+    </div>
+  
+    <div class="form__submit d-flex justify-content-center mt-5">
+      <%= f.submit '更新する', class: 'form__button' %>
+    </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
