--- a/app/assets/stylesheets/common-style.scss
+++ b/app/assets/stylesheets/common-style.scss
@@ -1,4 +1,15 @@
+.footerFixed{
+    min-height: 100vh; /* ←コンテンツの高さの最小値＝ブラウザの高さに指定 */
+    position: relative;/* ←相対位置 */
+    padding-bottom: 60px; /* ←フッターの高さを指定 */
+    box-sizing: border-box;
+    /* ↑ヘッダーやフッターを含むすべての要素の高さ＝min-height:100vhになるように指定 */
+}
+
 .footer {
+    position: absolute;/* ←絶対位置 */
+    bottom: 0;
+    width: 100%;
 
   p {
     margin-bottom: 0; /* pタグにデフォルトで適用されているマージンを削除 */
