--- a/app/assets/stylesheets/top-style.scss
+++ b/app/assets/stylesheets/top-style.scss
@@ -92,6 +92,10 @@
       margin-bottom: 20px;
       margin-left: 15px;
     }
+    
+    a {
+      color: black;
+    }
   }
   
   &--category-menus {
