--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,12 @@
   </head>
 
   <body style="background: #F5F5F9;">
-    <%= render "layouts/header" %>
-    <%= render 'shared/flash-message' %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
+    <div class="footerFixed">
+      <%= render "layouts/header" %>
+      <%= render 'shared/flash-message' %>
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
