問題出題画面作成

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -18,7 +18,7 @@
               <li>・完了後はご自身の回答結果をご確認いただけます。</li>
             </ul>
           </div>
-          <button type="button" class="btn btn-success mt-4">問題を開始する</button>
+          <%= link_to "問題を開始する", category_quiz_questions_path, class: "btn btn-success mt-4" %>
       </div>
     </div>
   </div>
