出題問題のデータ取得ロジックをコントローラに実装

--- a/app/views/category_quiz_questions/index.html.erb
+++ b/app/views/category_quiz_questions/index.html.erb
@@ -1,24 +1,10 @@
 <%= form_with(model: @user_answer || UserAnswer.new, local: true) do |f| %>
-  <% @category_quiz_questions.each_with_index do |question, question_number| %>
-  
+
+  <% @questions_with_choices.each_with_index do |question_data, question_number| %>
     <div class="main__quiz--question">
-      <p>問題<%= question_number + 1 %>：<%= question.content %></p>
-      
+      <p>問題<%= question_number + 1 %>：<%= question_data[:question].content %></p>
       <ul>
-        <% choices_to_display = [] %>
-        <% category_question_choices = CategoryQuestionChoice.where(category_quiz_question_id: question.id) %>
-        <% correct_choice = category_question_choices.select { |choice| choice.is_correct } %>
-        <% incorrect_choices = category_question_choices.select { |choice| !choice.is_correct } %>
-        
-        <% choices_to_display.concat(correct_choice) %>
-        
-        <% incorrect_choices.shuffle.each_with_index do |incorrect_choice, i| %>
-          <% if i < 3 %>
-            <% choices_to_display << incorrect_choice %>
-          <% end %>
-        <% end %>
-        
-        <%= f.collection_radio_buttons :category_question_choice_id, choices_to_display.map { |choice| [choice.id, choice.content] }, :first, :last do |b| %>
+        <%= f.collection_radio_buttons :category_question_choice_id, question_data[:choices].map { |choice| [choice.id, choice.content] }, :first, :last do |b| %>
           <div class="main__quiz--radio">
             <li>
               <%= b.radio_button %>
@@ -26,10 +12,10 @@
             </li>
           </div>
         <% end %>
-        
       </ul>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+  
   <div class="main__quiz--submit">
     <%= f.submit "回答を送信する", class: "btn btn-success mt-4" %>
   </div>
