--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
               <a class="dropdown-toggle text-purple" data-bs-toggle="dropdown" href="#"></a>
               <div class="dropdown-menu dropdown-menu-end shadow text-center" style="padding: 4px 0px;">
                 <%= link_to "アカウント編集", edit_user_registration_path, class: "dropdown-item text-secondary border-bottom py-2", data: { turbolinks: false } %>
-                <%= link_to "ログアウト", destroy_user_session_path, class: "dropdown-item text-secondary py-2", method: :delete %>
+                <%= button_to "ログアウト", destroy_user_session_path, class: "dropdown-item text-secondary py-2", method: :delete %>
               </div>
             </div>
           </div>
